<resources>
    <string name="app_name">mastering</string>
    <string name="contentText">Bonjour</string>
    <string name="Taquin">Android est taquin</string>


    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>


    <string name="start">START GAME</string>



</resources>